syntax = "proto3";

package rpc;

// import "common.proto";

service ManagerServerRPC {
    rpc SetExceptionMsg (MGExceptionMsgReq) returns (MGExceptionMsgRes) {}
    // rpc GetOfflineMsgs (MGOfflineMsgReq) returns (MGOfflineMsgRes) {}
    rpc Sync (MGSyncMsgReq) returns (MGSyncMsgRes) {}
}

message MGExceptionMsgReq {
    int64  sourceUID = 1;
    int64  targetUID = 2;
    string msgID     = 3;
    string msg       = 4;
}

message MGExceptionMsgRes {
    uint32 errCode = 1;
    string errStr  = 2;
}

// message MGOfflineMsgReq {
//     int64  uid = 1;
// }

// message offlineMsg {
//     int64  sourceUID = 1;
//     int64  targetUID = 2;
//     string msgID     = 3;
//     string msg       = 4;
// }

// message MGOfflineMsgRes {
//     uint32 errCode = 1;
//     string errStr  = 2;
//     repeated offlineMsg msgs = 3;
// }


// Sync
message MGSyncMsgReq {
    int64 UID       = 1;
    int64 currentID = 2;
    int64 totalID   = 3;
}

message MGSyncMsgRes {
    uint32 errCode   = 1;
    string errStr    = 2;
    int64  currentID = 3;
    message offsetMsg {
        int64  sourceUID   = 1;
        int64  targetUID   = 2;
        int64  groupID     = 3; 
        string msgType     = 4;
        string msgID       = 5;
        string msg         = 6;
    }
    repeated offsetMsg Msgs = 4;
}

